--- a/.settings/settings.json
+++ b/.settings/settings.json
@@ -26,7 +26,11 @@
    },
    "peacock.color": "#173ba5",
    "cSpell.words": [
+      "Codingame",
       "Collatz",
-      "Gnoga"
+      "Eulercoin",
+      "Eulercoins",
+      "Gnoga",
+      "Leonhard"
    ]
 }
