--- a/project_euler/alire.toml
+++ b/project_euler/alire.toml
@@ -2,8 +2,8 @@ name = "alice_project_euler"
 description = "Project Euler support for Alice"
 version = "0.1.0-dev"
 website = "https://github.com/rocher/Alice/wiki"
-licenses = ["MIT"]
-tags = ["alice", "adventures", "coding excellence", "learning", "mathematics", "project Euler"]
+licenses = "MIT"
+tags = ["alice", "adventures", "learning", "mathematics", "project-euler"]
 
 authors = ["Francesc Rocher"]
 maintainers = ["Francesc Rocher <francesc.rocher@gmail.com>"]
