--- a/alire.toml
+++ b/alire.toml
@@ -2,8 +2,8 @@ name = "alice"
 description = "Adventures for Learning and Inspiring Coding Excellence"
 version = "0.1.0-dev"
 website = "https://github.com/rocher/Alice/wiki"
-licenses = ["MIT"]
-tags = ["alice", "adventures", "coding excellence", "learning", "mathematics", "problems", "challenges"]
+licenses = "MIT"
+tags = ["alice", "adventures", "learning", "mathematics", "problems", "challenges"]
 
 authors = ["Francesc Rocher"]
 maintainers = ["Francesc Rocher <francesc.rocher@gmail.com>"]
