--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,9 @@
 /alire/
 /config/
 /tmp/
-/.vscode/
-**/bin/
-**/obj/
+/**/.vscode/
+/**/bin/
+/**/obj/
+/**/shared/
 .gitmodules
 project_euler/usr/
